# widelands

./: .bzrignore  .clang-format  .clang-tidy  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .indent.pro  .travis.sh  .travis.yml  AUTHORS  BzrRevision.cmake  CMakeLists.txt  CONTRIBUTING.md  CREDITS  ChangeLog  DESCRIPTION  Doxyfile  INSTALL  InputRevision.cmake  Makefile  Makefile.am  Makefile.in  NEWS  README  README-compiling.txt  README.developers  README.md  Release_Notes.md  SConstruct  TODO  TODO.txt  WL_RELEASE  _test  aclocal.m4  appveyor.yml  asan_3rd_party_leaks  build  build-widelands.sh  (+21 more)
doc/: .cvsignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.compiling  README.development  README.spurious_source_code_regexps  SConscript  dedicated_server_setting_up.txt  gametips  hidden_features.txt  productionsite_program_reference.html  productionsite_program_reference.xhtml  sorttable.js  wl sound docu (toptopple).ods
doc/geometry/: Makefile  SConscript  index.html  index.xhtml
doc/sphinx/: Makefile  README  documentation_enhancements.py  extract_rst.py  make.bat  make.py  make_class_diagram.py  make_class_diagram_from_rst.py  requirements.txt
src/: .cvsignore  CMakeLists.txt  CodeCheck.cmake  CompPlayer.cc  CompPlayer.h  CppCheck.cmake  CppCheckSuppressions.cmake  HTMLReferences.h  IntPlayer.cc  IntPlayer.h  Makefile.am  Makefile.in  README.md  SConscript  SConscript.dist  TribeBasicInfo.h  align.cc  align.h  animation.cc  animation.h  animation_gfx.h  areawatcher.cc  areawatcher.h  attack_controller.cc  attack_controller.h  attackable.h  auto_pic.cc  auto_pic.h  backtrace.cc  backtrace.h  basic_fileread.h  basic_filewrite.h  battle.cc  battle.h  bitinbuffer.h  bitoutbuffer.h  bob.cc  bob.h  build_id.cc.default  build_id.h  (+642 more)
src/ai/: CMakeLists.txt  SConscript  SConscript.dist  ai_help_structs.cc  ai_help_structs.h  ai_hints.cc  ai_hints.h  computer_player.cc  computer_player.h  defaultai.cc  defaultai.h  defaultai_seafaring.cc  defaultai_warfare.cc
src/base/: CMakeLists.txt  backtrace_provider.cc  backtrace_provider.h  crypto.cc  crypto.h  deprecated.cc  deprecated.h  exceptions.cc  format_impl.cc  format_impl.h  i18n.cc  i18n.h  log.cc  log.h  macros.cc  macros.h  math.cc  math.h  md5.cc  md5.h  multithreading.cc  multithreading.h  mutex.h  point.cc  point.h  port.cc  port.h  random.cc  random.h  rect.cc  rect.h  scoped_timer.cc  scoped_timer.h  string.cc  string.h  test.cc  test.h  time_string.cc  time_string.h  times.cc  (+10 more)
src/chat/: CMakeLists.txt  chat.cc  chat.h
src/commands/: CMakeLists.txt  cmd_act.cc  cmd_act.h  cmd_attack.cc  cmd_attack.h  cmd_build_building.cc  cmd_build_building.h  cmd_build_flag.cc  cmd_build_flag.h  cmd_build_road.cc  cmd_build_road.h  cmd_build_waterway.cc  cmd_build_waterway.h  cmd_building_name.cc  cmd_building_name.h  cmd_bulldoze.cc  cmd_bulldoze.h  cmd_calculate_statistics.cc  cmd_calculate_statistics.h  cmd_call_economy_balance.cc  cmd_call_economy_balance.h  cmd_change_soldier_capacity.cc  cmd_change_soldier_capacity.h  cmd_change_training_options.cc  cmd_change_training_options.h  cmd_delete_message.cc  cmd_delete_message.h  cmd_destroy_map_object.cc  cmd_destroy_map_object.h  cmd_diplomacy.cc  cmd_diplomacy.h  cmd_dismantle_building.cc  cmd_dismantle_building.h  cmd_drop_soldier.cc  cmd_drop_soldier.h  cmd_enhance_building.cc  cmd_enhance_building.h  cmd_evict_worker.cc  cmd_evict_worker.h  cmd_expedition_config.cc  (+77 more)
src/economy/: CMakeLists.txt  SConscript  SConscript.dist  cmd_call_economy_balance.cc  cmd_call_economy_balance.h  economy.cc  economy.h  economy_data_packet.cc  economy_data_packet.h  expedition_bootstrap.cc  expedition_bootstrap.h  ferry_fleet.cc  ferry_fleet.h  flag.cc  flag.h  flag_job.h  fleet.cc  fleet.h  idleworkersupply.cc  idleworkersupply.h  input_queue.cc  input_queue.h  iroute.h  itransport_cost_calculator.h  portdock.cc  portdock.h  request.cc  request.h  road.cc  road.h  roadbase.cc  roadbase.h  route.cc  route.h  routeastar.cc  routeastar.h  router.cc  router.h  routing_node.h  ship_fleet.cc  (+26 more)
src/editor/: CMakeLists.txt  SConscript  SConscript.dist  editor.cc  editor.h  editor_category.cc  editor_category.h  editor_tools.cc  editor_tools_option_menus.cc  editorinteractive.cc  editorinteractive.h  editorinteractive_lua.cc  map_generator.cc  map_generator.h  ocean_colors.cc  ocean_colors.h  scripting.cc  scripting.h
src/events/: CMakeLists.txt  SConscript  SConscript.dist  event.cc  event.h  event_allow_building.cc  event_allow_building.h  event_allow_building_types.cc  event_allow_building_types.h  event_allow_retreat_change.cc  event_allow_retreat_change.h  event_allow_worker_types.cc  event_allow_worker_types.h  event_building.cc  event_building.h  event_chain.cc  event_chain.h  event_conquer_area.cc  event_conquer_area.h  event_expire_message.cc  event_expire_message.h  event_factory.cc  event_factory.h  event_flag.cc  event_flag.h  event_forbid_building_types.cc  event_forbid_building_types.h  event_forbid_retreat_change.cc  (+60 more)
wtfcreate/: Makefile.am  README  bob_descr.cc  bob_descr.h  building_descr.cc  building_descr.h  confreader.cc  confreader.h  fabric.h  file_descr.cc  file_descr.h  logic_bob_descr.cc  logic_bob_descr.h  main.cc  need_list.cc  need_list.h  parse.cc  parse.h  parse_bobs.cc  parse_bobs.h  pic_descr.cc  pic_descr.h  soldier_descr.cc  soldier_descr.h  tribe_descr.cc  tribe_descr.h  tribedata.h  ware_descr.cc  ware_descr.h  worker_descr.cc  worker_descr.h  write_tribefile.cc  write_tribefile.h  wtfcreate.h
wwfcreate/: Makefile  Makefile.am  Makefile.in  README  confreader.cc  confreader.h  main.cc  parse.cc  parse.h  picturereader.cc  picturereader.h  resource_descr.cc  resource_descr.h  terrain_descr.cc  terrain_descr.h  write_worldfile.cc  write_worldfile.h  wwfcreate.h
xdg/: CMakeLists.txt  org.widelands.Widelands.appdata.xml  org.widelands.Widelands.appdata.xml.stub  org.widelands.Widelands.desktop  org.widelands.Widelands.desktop.stub  org.widelands.Widelands.metainfo.xml  org.widelands.Widelands.metainfo.xml.stub  release_urls.json  widelands.6
(+18773 files in other folders)
